añadiendo templates de achuapa

--- a/README
+++ b/README
@@ -1,1 +1,6 @@
 Sistema de monitoreo sobre cooperativa CECOCAFEN Matagalpa
+
+Manejo de suelo ###listo
+Post cosecha ###listo
+vulnerabilidad  ###listo
+agua(grafos, modificacion de tabla) ###listo
